--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,8 +2,11 @@
 <html>
 <body>
 
-<h1>Chu The Toan</h1>
-<p>2121051176.</p>
+<h2>Chu The Toan</h2>
+
+<p> link tin tuc moi nhat  :</p>
+
+<a href="https://www.24h.com.vn/">Visit bao24h</a>
 
 </body>
 </html>
