--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h2>Chu The Toan</h2>
-
-<p> link tin tuc moi nhat  :</p>
-
-<a href="https://www.24h.com.vn/">Visit bao24h</a>
-
+<h1> Chu The Toan <h1>
+<h2> 2121051176 <h2>
+<h3> Ha Noi <h3>
+<h4> Ba Vi <h4>
+<h5> Chu The Toan <h5>
 </body>
 </html>
