--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
+<!DOCTPYE html>
 <html>
 <body>
-<h1> Chu The Toan <h1>
-<h2> 2121051176 <h2>
-<h3> Ha Noi <h3>
-<h4> Ba Vi <h4>
-<h5> Chu The Toan <h5>
+<p> Chu The Toan </p>
+<p> Chu The Toan </p> 
+<p> Chu The Toan 2121051176 </p>
 </body>
 </html>
