--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -1,8 +1,8 @@
-<!DOCTPYE html>
+<!DOCTYPE html>
 <html>
 <body>
-<p> Chu The Toan </p>
-<p> Chu The Toan </p> 
-<p> Chu The Toan 2121051176 </p>
+<p> hoc sinh truong humgh </p>
+<p> Chu the Toan 2121051176 </p>
+<p> chu the toan  </p>
 </body>
 </html>
