--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p> hoc sinh truong humgh </p>
-<p> Chu the Toan 2121051176 </p>
-<p> chu the toan  </p>
+
+<p>I am Toan </p>
+<p style="color:purple;"> I am purple</p>
+<p style="color:green;">I am green</p>
+<p style="font-size:70px;">I am small</p>
+
 </body>
 </html>
