HTML Text Formatting

--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,10 +2,9 @@
 <html>
 <body>
 
-<p>I am Toan </p>
-<p style="color:purple;"> I am purple</p>
-<p style="color:green;">I am green</p>
-<p style="font-size:70px;">I am small</p>
+<p><b>chu the toan</b></p>
+<p><i>chu in nghieng</i></p>
+<p>Chu <sub> The</sub>  <sup>Toan</sup></p>
 
 </body>
 </html>
