HTML Quotation and Citation Elements

--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,9 +2,12 @@
 <html>
 <body>
 
-<p><b>chu the toan</b></p>
-<p><i>chu in nghieng</i></p>
-<p>Chu <sub> The</sub>  <sup>Toan</sup></p>
+<p>Câu nói hay về gia đình:</p>
+
+<blockquote cite="https://didongviet.vn/dchannel/nhung-cau-noi-hay-ve-cuoc-song/">
+“Gia đình là nơi tốt nhất mà bạn tìm về với bình yên, là nơi tốt nhất mà bạn tìm về với bình yên, là nơi có thể giúp bạn nghĩ ngơi khi vấp ngã, là nơi yêu thương mà không cần điều kiện, là nơi có cuộc sống tốt nhất để tao nên vỏ bọc bảo vệ.”
+</blockquote>
 
 </body>
 </html>
+
