--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,12 +2,12 @@
 <html>
 <body>
 
-<p>Câu nói hay về gia đình:</p>
-
-<blockquote cite="https://didongviet.vn/dchannel/nhung-cau-noi-hay-ve-cuoc-song/">
-“Gia đình là nơi tốt nhất mà bạn tìm về với bình yên, là nơi tốt nhất mà bạn tìm về với bình yên, là nơi có thể giúp bạn nghĩ ngơi khi vấp ngã, là nơi yêu thương mà không cần điều kiện, là nơi có cuộc sống tốt nhất để tao nên vỏ bọc bảo vệ.”
-</blockquote>
+<p>“Cuối cùng vẫn chỉ có tình cảm gia đình là thứ tình yêu vô điều kiện duy nhất trong cuộc đời mỗi con người.”</p>
+<!--
+<p>Nếu con mệt quá hay về nhà đi con  image:</p>
+<img border="0" src="pic_trulli.jpg" alt="Trulli">
+-->
+<p>“Cuối cùng vẫn chỉ có tình cảm gia đình là thứ tình yêu vô điều kiện duy nhất trong cuộc đời mỗi con người.”</p>
 
 </body>
 </html>
-
