HTML Styles - CSS

--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,12 +2,10 @@
 <html>
 <body>
 
-<p>“Cuối cùng vẫn chỉ có tình cảm gia đình là thứ tình yêu vô điều kiện duy nhất trong cuộc đời mỗi con người.”</p>
-<!--
-<p>Nếu con mệt quá hay về nhà đi con  image:</p>
-<img border="0" src="pic_trulli.jpg" alt="Trulli">
--->
-<p>“Cuối cùng vẫn chỉ có tình cảm gia đình là thứ tình yêu vô điều kiện duy nhất trong cuộc đời mỗi con người.”</p>
+<h1 style="color:purple;">Chu The Toan</h1>
+
+<p style="color:green;">Chu The Toan 2121051176.</p>
 
 </body>
 </html>
+
