--- a/baithuchanh1808.css
+++ b/baithuchanh1808.css
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1 style="color:purple;">Chu The Toan</h1>
+<h1>chu The Toan</h1>
 
-<p style="color:green;">Chu The Toan 2121051176.</p>
+<p><a href="https://www.24h.com.vn/">Visit bao24h</a></p>
 
 </body>
 </html>
